--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body>
+  <body style="background-color: red">
     <h1>Home page</h1>
     <p>
       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga quidem culpa earum perferendis
